fixed layout on mobile

--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -74,6 +74,7 @@ main {
 		@media screen and (max-width: $mobileW) {
 			height: auto;
 			padding-bottom: 0vh;
+			padding-top: 5vh;
 			img, .hypem {
 			display: none;
 			visibility: hidden;
@@ -127,6 +128,7 @@ main {
 		border-radius: 30px;
 		@media screen and (max-width: $mobileW){
 			margin-top: 5px;
+			padding: 4px 15px;
 		}
 		margin-right: 10px;
 	}
@@ -223,10 +225,14 @@ main {
 	@media screen and (max-width: $smallMobileW){
 		margin-left: 20px;
 		margin-right: 20px;
+		height: 35px;
+	    line-height: 35px;
 	}
 	@media screen and (max-width: $mobileW){
 		padding: 0 !important;
 		margin-top: 0;
+		height: 35px;
+	    line-height: 35px;
 	}
 }
 
